--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 before_install:
 - wget https://github.com/openshift/origin/releases/download/v1.3.1/openshift-origin-server-v1.3.1-dad658de7465ba8a234a4fb40b5b446a45a4cee1-linux-64bit.tar.gz -O openshift.tar.gz
 - tar zxvf openshift.tar.gz
-- cd openshit
+- ls -lar
 - sudo ./openshift start
 
 script:
