--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 - tar -xvf openshift.tar.gz
 - cd openshift-origin-server-v1.3.1-dad658de7465ba8a234a4fb40b5b446a45a4cee1-linux-64bit
 - ls -lar
-- sudo ./openshift start &> openshift.log &
+- sudo oc cluster up
 
 script:
 - curl -k https://0.0.0.0:8443
