--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 - cd openshift-origin-server-v1.3.1-dad658de7465ba8a234a4fb40b5b446a45a4cee1-linux-64bit
 - ls -lar
 - chmod +x oc
-- oc cluster up
+- ./oc cluster up
 
 script:
 - curl -k https://0.0.0.0:8443
