--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,8 @@
-rvm:
-  - 2.2
-  - 2.3
-
-env:
-  - FOO=foo
-  - FOO=bar
-
-script: echo $FOO
-
 jobs:
   include:
+    - stage: test
+      script: ./test 1
+    - stage: test
+      script: ./test 2
     - stage: deploy
-      script: echo Deploy
-      # Keep in mind to overwrite these here
-      rvm: 2.3
-      env: FOO=foo
+      script: ./deploy
