--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,49 @@
+sudo: required
+
+language: java
+
+services: docker
+
+jdk: oraclejdk8
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
+before_install:
+ - echo 'chmod +x gradlew'
+
+after_success:
+ - echo './gradlew jacocoTestReport coveralls'
+
 jobs:
   include:
     - stage: test
-      script: ./test 1
-    - stage: test
-      script: ./test 2
+      install:
+      - echo "FROM sonarqube:${SONARQUBE_VERSION}-alpine" > Dockerfile.ci
+      - echo "COPY sonar-puppet-plugin/build/libs/* /opt/sonarqube/extensions/plugins/" >> Dockerfile.ci
+      - cd /tmp
+      - wget https://sonarsource.bintray.com/Distribution/sonar-scanner-cli/sonar-scanner-2.5.zip
+      - unzip sonar-scanner-2.5.zip
+      - cd -
+      - gem install puppet -v 3.8.6
+      env:
+      matrix:
+        - SONARQUBE_VERSION=5.6.6 PATH=/tmp/sonar-scanner-2.5/bin:$PATH
+        - SONARQUBE_VERSION=6.0 PATH=/tmp/sonar-scanner-2.5/bin:$PATH
+        - SONARQUBE_VERSION=6.1 PATH=/tmp/sonar-scanner-2.5/bin:$PATH
+        - SONARQUBE_VERSION=6.2 PATH=/tmp/sonar-scanner-2.5/bin:$PATH
+        - SONARQUBE_VERSION=6.3 PATH=/tmp/sonar-scanner-2.5/bin:$PATH
+        
+      script:
+      - echo 'build'
+      - docker build -t sonar-puppet -f Dockerfile.ci .
+      - docker run -d --name sonarqube -p 9000:9000 -p 9092:9092 sonar-puppet
+      - echo 'functionalTest
+
     - stage: deploy
-      script: ./deploy
+      script: echo 'deploy'
