--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
     
       install:
       - echo "FROM sonarqube:${SONARQUBE_VERSION}-alpine" > Dockerfile.ci
-      - echo "COPY sonar-puppet-plugin/build/libs/* /opt/sonarqube/extensions/plugins/" >> Dockerfile.ci
+      #- echo "COPY sonar-puppet-plugin/build/libs/* /opt/sonarqube/extensions/plugins/" >> Dockerfile.ci
       - cd /tmp
       - wget https://sonarsource.bintray.com/Distribution/sonar-scanner-cli/sonar-scanner-2.5.zip
       - unzip sonar-scanner-2.5.zip
